# BarrenYield

./: .gitignore  .gitmodules  structure.txt
README/: DevelopmentPlan.md
cpp/: .sconsign.dblite  CMakeLists.txt  SConstruct
cpp/include/: register_types.h
cpp/include/core/: GameLogger.h  GameManager.h  ResourceRegistry.h
cpp/include/economy/: Inventory.h
cpp/include/utils/: JsonLoader.h
cpp/src/: register_types.cpp  register_types.os
cpp/src/core/: GameLogger.cpp  GameLogger.os  GameManager.cpp  GameManager.os  ResourceRegistry.cpp  ResourceRegistry.os
cpp/src/economy/: Inventory.cpp  Inventory.os
cpp/src/utils/: JsonLoader.cpp  JsonLoader.os
godot/: barren_yield.gdextension  barren_yield.gdextension.uid  project.godot
godot/data/registry/: resources.json
godot/scenes/: Main.tscn  main.gd  main.gd.uid
